# web-scraping-template

./: .gitignore  CONFIGURATION.md  LICENSE  MANIFEST.in  README.md  config.yaml  install.py  pyproject.toml  requirements.txt  setup.py
examples/: basic_scraping.py  custom_function_example.py  infinite_scroll_example.py  multi_page_example.py
web_scraping_template/: __init__.py  scraper_template.py
